# django-payments

./: README.md  pyproject.toml
apps/payments/: models.py
core/: settings.py
